--- a/index.html
+++ b/index.html
@@ -37,13 +37,39 @@
     <h1>counter-app</h1>
     <!-- this is going to do whatever the tag's defaults are -->
     <h2>Default</h2>
-    <counter-app></counter-app>
+    <counter-app counter="4" min="2" max="9"></counter-app>
     <h2>Slot usage</h2>
     <counter-app data-accent="2" data-primary="17"><div>Sample slot content</div></counter-app>
     <h2>Property usage</h2>
     <counter-app id="example" title="Sample property title"></counter-app>
+
+    <!-- <counter-app>
+      <div class="counter">
+        <h2>
+          <span id="counter"></span>
+        </h2>
+        <button onclick="onInc">increment+</button>
+        <button onclick="onDec">decrement-</button>
+      </div>
+    </counter-app> -->
+
   </div>
   <script type="module" src="./counter-app.js"></script>
+  <script>
+    let count = 0;
+    const counter = document.getElementById("count");
+
+    function onDec(){
+      count = count - 1;
+      counter.textContent=count
+    }
+
+    function onInc(){
+      count = count + 1;
+      counter.textContent=count
+    }
+
+  </script>
 
   <!-- Take HAX, the Web and you further down the rabbit hole -->
   <style>
