--- a/index.html
+++ b/index.html
@@ -36,24 +36,16 @@
   <div id="demo">
     <h1>counter-app</h1>
     <!-- this is going to do whatever the tag's defaults are -->
-    <h2>Default</h2>
-    <counter-app counter="4" min="2" max="9"></counter-app>
-    <h2>Slot usage</h2>
-    <counter-app data-accent="2" data-primary="17"><div>Sample slot content</div></counter-app>
-    <h2>Property usage</h2>
-    <counter-app id="example" title="Sample property title"></counter-app>
-
-    <!-- <counter-app>
-      <div class="counter">
-        <h2>
-          <span id="counter"></span>
-        </h2>
-        <button onclick="onInc">increment+</button>
-        <button onclick="onDec">decrement-</button>
-      </div>
-    </counter-app> -->
-
+    <h2>Counter 1:</h2>
+    <counter-app counter="16" min="10" max="25"></counter-app>
+    <!-- <h2>Slot usage</h2> -->
+    <h2>Counter 2:</h2>
+    <counter-app counter="16" min="10" max="25"></counter-app>
+    <!-- <counter-app data-accent="2" data-primary="17"><div>Sample slot content</div></counter-app> -->
+    <!-- <h2>Property usage</h2> -->
+    <!-- <counter-app id="example" title="Sample property title"></counter-app> -->
   </div>
+  
   <script type="module" src="./counter-app.js"></script>
   <script>
     let count = 0;
