--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
   <div id="demo">
     <h1>counter-app</h1>
     <!-- this is going to do whatever the tag's defaults are -->
-    <h2>Counter 1:</h2>
-    <counter-app counter="16" min="10" max="25"></counter-app>
-    <!-- <h2>Slot usage</h2> -->
+    <h3>Change color on max, min, 18, 21. Confetti on 21</h3>
+    <h2>Counter 1: Default counter</h2>
+    <h7>Min: -3, Max: 30 </h7>
+    <counter-app></counter-app>    <!-- <h2>Slot usage</h2> -->
     <h2>Counter 2:</h2>
+    <h7>Min: 10, Max=25</h7>
     <counter-app counter="16" min="10" max="25"></counter-app>
     <!-- <counter-app data-accent="2" data-primary="17"><div>Sample slot content</div></counter-app> -->
     <!-- <h2>Property usage</h2> -->
@@ -47,21 +49,6 @@
   </div>
   
   <script type="module" src="./counter-app.js"></script>
-  <script>
-    let count = 0;
-    const counter = document.getElementById("count");
-
-    function onDec(){
-      count = count - 1;
-      counter.textContent=count
-    }
-
-    function onInc(){
-      count = count + 1;
-      counter.textContent=count
-    }
-
-  </script>
 
   <!-- Take HAX, the Web and you further down the rabbit hole -->
   <style>
